Bugzilla bug #30746: add a PR_SetConcurrency(2) call in NSPR initialization and have NSPR initialization wait until the timer manager thread starts to run. Modified files: prmwait.c, prinit.c