nsprpub/pr/src/misc/prinit.c
@@ -229,6 +229,16 @@ static void _PR_InitStuff(void)
 #endif
 	
     _PR_MD_FINAL_INIT();
+
+#ifdef WINNT
+    /*
+     * Create an additional CPU thread so that if the primordial
+     * thread (a fiber) calls a native blocking function and blocks
+     * the primordial CPU thread, there is still a CPU thread that
+     * can read the I/O completion port.
+     */
+    PR_SetConcurrency(2);
+#endif
 }
 
 void _PR_ImplicitInitialization()
